# spirit

./: CMakeLists.txt
assets/: credits.txt
src/: aabb.h  asset_manager.cpp  asset_manager.h  camera.h  chunk.cpp  chunk.h  config.h  constants.h  core.cpp  core.h  defines.h  entity.cpp  entity.h  main.cpp  platform.cpp  platform.h  shader.cpp  shader.h  shader_source.h  sprite.h  sprite_batch.cpp  sprite_batch.h  texture_atlas.cpp  texture_atlas.h  tile.cpp  tile.h  types.h  world.cpp  world.h
